frontend/test/should_fail/defYield_009a.grg
rule t
{
	def x:Node;
	
	modify {
		y:Node;
		eval { yield x = y; }
	}
}

pattern p
{
	def y:Node;
	
	modify {
		x:Node;
		eval { yield y = x; }
	}
}

